--- a/index.html
+++ b/index.html
@@ -26,7 +26,24 @@
                 <li id="skin_4" title="橙色">橙色</li>
                 <li id="skin_5" title="淡绿色">淡绿色</li>
             </ul>
-            <div id="nav" class="mainNav"></div>
+            <div id="nav" class="mainNav">
+                <ul class="nav clearfix">
+                    <li><a href="#">首页</a></li>
+                    <li>
+                        <a href="#">推荐品牌</a>
+                        <div class="jnNav"></div>
+                    </li>
+                    <li>
+                        <a href="#">女装</a>
+                        <!-- <div class="jnNav"></div> -->
+                    </li>
+                    <li>
+                        <a href="#">男装</a>
+                        <!-- <div class="jnNav"></div> -->
+                    </li>
+                    <li><a href="#">鞋包配饰</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- /header -->
