--- a/index.html
+++ b/index.html
@@ -28,20 +28,61 @@
             </ul>
             <div id="nav" class="mainNav">
                 <ul class="nav clearfix">
-                    <li><a href="#">首页</a></li>
+                    <li><a href="#" class="nav-link">首页</a></li>
                     <li>
-                        <a href="#">推荐品牌</a>
-                        <div class="jnNav"></div>
+                        <a href="#" class="nav-link">推荐品牌</a>
+                        <div class="jnNav">
+                            <dl class="clearfix">
+                                <dt>
+                                    <a href="#">推荐品牌</a>
+                                </dt>
+                                <dd class="clearfix">
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">安踏</a></em>
+                                    <em><a href="#">奥康</a></em>
+                                    <em><a href="#">骆驼</a></em>
+                                    <em><a href="#">特步</a></em>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">特步</a></em>
+                                </dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt>
+                                    <a href="#">推荐品牌</a>
+                                </dt>
+                                <dd>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">安踏</a></em>
+                                    <em><a href="#">奥康</a></em>
+                                    <em><a href="#">骆驼</a></em>
+                                    <em><a href="#">特步</a></em>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">特步</a></em>
+                                </dd>
+                            </dl>
+                        </div>
                     </li>
                     <li>
-                        <a href="#">女装</a>
+                        <a href="#" class="nav-link">女装</a>
                         <!-- <div class="jnNav"></div> -->
                     </li>
                     <li>
-                        <a href="#">男装</a>
+                        <a href="#" class="nav-link">男装</a>
                         <!-- <div class="jnNav"></div> -->
                     </li>
-                    <li><a href="#">鞋包配饰</a></li>
+                    <li><a href="#" class="nav-link">鞋包配饰</a></li>
                 </ul>
             </div>
         </div>
