--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
             <div id="nav" class="mainNav">
                 <ul class="nav clearfix">
-                    <li><a href="#" class="nav-link">首页</a></li>
+                    <li><a href="#" class="nav-link">首 页</a></li>
                     <li>
                         <a href="#" class="nav-link">推荐品牌</a>
                         <div class="jnNav">
@@ -75,12 +75,94 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">女装</a>
-                        <!-- <div class="jnNav"></div> -->
+                        <a href="#" class="nav-link">女 装</a>
+                        <div class="jnNav">
+                            <dl class="clearfix">
+                                <dt>
+                                    <a href="#">推荐品牌</a>
+                                </dt>
+                                <dd class="clearfix">
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">安踏</a></em>
+                                    <em><a href="#">奥康</a></em>
+                                    <em><a href="#">骆驼</a></em>
+                                    <em><a href="#">特步</a></em>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">特步</a></em>
+                                </dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt>
+                                    <a href="#">推荐品牌</a>
+                                </dt>
+                                <dd>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">安踏</a></em>
+                                    <em><a href="#">奥康</a></em>
+                                    <em><a href="#">骆驼</a></em>
+                                    <em><a href="#">特步</a></em>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">特步</a></em>
+                                </dd>
+                            </dl>
+                        </div>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">男装</a>
-                        <!-- <div class="jnNav"></div> -->
+                        <a href="#" class="nav-link">男 装</a>
+                        <div class="jnNav">
+                            <dl class="clearfix">
+                                <dt>
+                                    <a href="#">推荐品牌</a>
+                                </dt>
+                                <dd class="clearfix">
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">安踏</a></em>
+                                    <em><a href="#">奥康</a></em>
+                                    <em><a href="#">骆驼</a></em>
+                                    <em><a href="#">特步</a></em>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">特步</a></em>
+                                </dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt>
+                                    <a href="#">推荐品牌</a>
+                                </dt>
+                                <dd>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">安踏</a></em>
+                                    <em><a href="#">奥康</a></em>
+                                    <em><a href="#">骆驼</a></em>
+                                    <em><a href="#">特步</a></em>
+                                    <em><a href="#">耐克</a></em>
+                                    <em><a href="#">阿迪达斯</a></em>
+                                    <em><a href="#">达芙妮</a></em>
+                                    <em><a href="#">李宁</a></em>
+                                    <em><a href="#">特步</a></em>
+                                </dd>
+                            </dl>
+                        </div>
                     </li>
                     <li><a href="#" class="nav-link">鞋包配饰</a></li>
                 </ul>
@@ -92,7 +174,12 @@
     <!-- content -->
     <div id="content">
         <!-- jnCatelog -->
-        <div id="jnCatelog"></div>
+        <div id="jnCatelog">
+            <h2>商品分类</h2>
+            <div class="jnCateinfo">
+
+            </div>
+        </div>
         <!-- /jnCatelog -->
     </div>
     <!-- /content -->
@@ -105,5 +192,6 @@
     <script src="./scripts/js-cookie.js" charset="utf-8"></script>
     <script src="./scripts/input.js" charset="utf-8"></script>
     <script src="./scripts/change-skin.js" charset="utf-8"></script>
+    <script src="./scripts/nav.js" charset="utf-8"></script>
 </body>
 </html>
