--- a/index.html
+++ b/index.html
@@ -177,7 +177,50 @@
         <div id="jnCatelog">
             <h2>商品分类</h2>
             <div class="jnCateinfo">
-
+                <h3>推荐品牌</h3>
+                <ul class="clearfix">
+                    <li><a href="#">耐克</a></li>
+                    <li><a href="#">阿迪达斯</a></li>
+                    <li><a href="#">达芙妮</a></li>
+                    <li><a href="#">李宁</a></li>
+                    <li><a href="#">安踏</a></li>
+                    <li><a href="#">奥康</a></li>
+                    <li><a href="#">骆驼</a></li>
+                    <li><a href="#">特步</a></li>
+                </ul>
+                <h3>女装</h3>
+                <ul class="clearfix">
+                    <li><a href="#">呢大衣</a></li>
+                    <li><a href="#">T恤</a></li>
+                    <li><a href="#">羽绒</a></li>
+                    <li><a href="#">衬衫</a></li>
+                    <li><a href="#">羊绒衫</a></li>
+                    <li><a href="#">针织</a></li>
+                    <li><a href="#">连衣裙</a></li>
+                    <li><a href="#">皮外套</a></li>
+                </ul>
+                <h3>男装</h3>
+                <ul class="clearfix">
+                    <li><a href="#">衬衫</a></li>
+                    <li><a href="#">T恤衫</a></li>
+                    <li><a href="#">夹克</a></li>
+                    <li><a href="#">大皮衣</a></li>
+                    <li><a href="#">风衣</a></li>
+                    <li><a href="#">牛仔裤</a></li>
+                    <li><a href="#">西服</a></li>
+                    <li><a href="#">卫衣</a></li>
+                </ul>
+                <h3>鞋包配饰</h3>
+                <ul class="clearfix">
+                    <li><a href="#">围巾</a></li>
+                    <li><a href="#">旅行箱</a></li>
+                    <li><a href="#">真皮包</a></li>
+                    <li><a href="#">韩版</a></li>
+                    <li><a href="#">达芙妮</a></li>
+                    <li><a href="#">单肩包</a></li>
+                    <li><a href="#">毛线</a></li>
+                    <li><a href="#">清仓靴子</a></li>
+                </ul>
             </div>
         </div>
         <!-- /jnCatelog -->
