--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                 <h3>推荐品牌</h3>
                 <ul class="clearfix">
                     <li><a href="#">耐克</a></li>
-                    <li><a href="#">阿迪达斯</a></li>
+                    <li><a href="#" class="promoted">阿迪达斯</a></li>
                     <li><a href="#">达芙妮</a></li>
                     <li><a href="#">李宁</a></li>
                     <li><a href="#">安踏</a></li>
                     <li><a href="#">奥康</a></li>
-                    <li><a href="#">骆驼</a></li>
+                    <li><a href="#" class="promoted">骆驼</a></li>
                     <li><a href="#">特步</a></li>
                 </ul>
                 <h3>女装</h3>
@@ -224,11 +224,32 @@
             </div>
         </div>
         <!-- /jnCatelog -->
+
+        <!-- jnImageroll -->
+        <div id="jnImageroll">
+            <a href="#" id="JS_imgWrap">
+                <img src="./images/ads/1.jpg" alt="">
+                <img src="./images/ads/2.jpg" alt="">
+                <img src="./images/ads/3.jpg" alt="">
+                <img src="./images/ads/4.jpg" alt="">
+                <img src="./images/ads/5.jpg" alt="">
+            </a>
+            <div>
+                <a href="#"><span>相约情人节</span><span>全场119元起</span></a>
+                <a href="#"><span>新款上线</span><span>全场357元</span></a>
+                <a href="#"><span>愤怒小鸟特卖</span><span>全场89元</span></a>
+                <a href="#"><span>男鞋促销第一波</span><span>全场3.1折起</span></a>
+                <a href="#"><span>春季全新发布</span><span>全场4.1折起</span></a>
+            </div>
+        </div>
+        <!-- /jnImageroll -->
     </div>
     <!-- /content -->
 
     <!-- footer -->
-    <div id="footer"></div>
+    <div id="footer">
+        Copyright &copy; 2009 - 2012 JaneShop Inc.
+    </div>
     <!-- /footer -->
 
     <script src="./scripts/jquery-3.2.0.js" charset="utf-8"></script>
@@ -236,5 +257,6 @@
     <script src="./scripts/input.js" charset="utf-8"></script>
     <script src="./scripts/change-skin.js" charset="utf-8"></script>
     <script src="./scripts/nav.js" charset="utf-8"></script>
+    <script src="./scripts/addhot.js" charset="utf-8"></script>
 </body>
 </html>
