--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <img src="./images/ads/5.jpg" alt="">
             </a>
             <div>
-                <a href="#"><span>相约情人节</span><span>全场119元起</span></a>
+                <a href="#" class="chos"><span>相约情人节</span><span>全场119元起</span></a>
                 <a href="#"><span>新款上线</span><span>全场357元</span></a>
                 <a href="#"><span>愤怒小鸟特卖</span><span>全场89元</span></a>
                 <a href="#"><span>男鞋促销第一波</span><span>全场3.1折起</span></a>
