--- a/index.html
+++ b/index.html
@@ -235,14 +235,25 @@
                 <img src="./images/ads/5.jpg" alt="">
             </a>
             <div>
-                <a href="#" class="chos"><span>相约情人节</span><span>全场119元起</span></a>
-                <a href="#"><span>新款上线</span><span>全场357元</span></a>
-                <a href="#"><span>愤怒小鸟特卖</span><span>全场89元</span></a>
-                <a href="#"><span>男鞋促销第一波</span><span>全场3.1折起</span></a>
-                <a href="#"><span>春季全新发布</span><span>全场4.1折起</span></a>
+                <a href="###1"><span>相约情人节</span><span>全场119元起</span></a>
+                <a href="###2"><span>新款上线</span><span>全场357元</span></a>
+                <a href="###3"><span>愤怒小鸟特卖</span><span>全场89元</span></a>
+                <a href="###4"><span>男鞋促销第一波</span><span>全场3.1折起</span></a>
+                <a href="###5"><span>春季全新发布</span><span>全场4.1折起</span></a>
             </div>
         </div>
         <!-- /jnImageroll -->
+
+        <!-- jnNotice -->
+        <div id="jnNotice">
+            <div id="jnMiaosha">
+                <a href="#" class="JS_css3">
+                    <img src="./images/upload/20120216.jpg" alt="">
+                </a>
+            </div>
+            <div id="jnNoticeInfo"></div>
+        </div>
+        <!-- /jnNotice -->
     </div>
     <!-- /content -->
 
@@ -258,5 +269,6 @@
     <script src="./scripts/change-skin.js" charset="utf-8"></script>
     <script src="./scripts/nav.js" charset="utf-8"></script>
     <script src="./scripts/addhot.js" charset="utf-8"></script>
+    <script src="./scripts/ad.js" charset="utf-8"></script>
 </body>
 </html>
