--- a/index.html
+++ b/index.html
@@ -251,7 +251,16 @@
                     <img src="./images/upload/20120216.jpg" alt="">
                 </a>
             </div>
-            <div id="jnNoticeInfo"></div>
+            <div id="jnNoticeInfo">
+                <h2 title="最新动态">最新动态</h2>
+                <ul>
+                    <li><a href="###1" class="tooltip" title="[活动] 伊伴春鞋迎春大促">[活动] 伊伴春鞋迎春大促</a></li>
+                    <li><a href="###2" class="tooltip" title="[活动] 千百度冬靴新品火热让利">[活动] 千百度冬靴新品火热让利</a></li>
+                    <li><a href="###3" class="tooltip" title="[活动] COEY秋冬新品全场2.3折起">[活动] COEY秋冬新品全场2.3折起</a></li>
+                    <li><a href="###4" class="tooltip" title="[活动] 伊伴春鞋迎春大促">[活动] 伊伴春鞋迎春大促</a></li>
+                    <li><a href="###5" class="tooltip" title="[活动] 千百度冬靴新品火热让利">[活动] 千百度冬靴新品火热让利</a></li>
+                </ul>
+            </div>
         </div>
         <!-- /jnNotice -->
     </div>
@@ -270,5 +279,6 @@
     <script src="./scripts/nav.js" charset="utf-8"></script>
     <script src="./scripts/addhot.js" charset="utf-8"></script>
     <script src="./scripts/ad.js" charset="utf-8"></script>
+    <script src="./scripts/tooltip.js" charset="utf-8"></script>
 </body>
 </html>
