--- a/index.html
+++ b/index.html
@@ -263,6 +263,80 @@
             </div>
         </div>
         <!-- /jnNotice -->
+
+        <!-- jnBrand -->
+        <div id="jnBrand">
+            <div id="jnBrandTab">
+                <h2>品牌活动</h2>
+                <ul>
+                    <li><a href="#">运动</a></li>
+                    <li><a href="#">女鞋</a></li>
+                    <li><a href="#">男鞋</a></li>
+                    <li><a href="#">童鞋</a></li>
+                </ul>
+            </div>
+            <div id="jnBrandContent">
+                <div id="jnBrandList">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="./images/upload/20120217.jpg" alt="">
+                            </a>
+                            <span><a href="#">耐克</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120218.jpg" alt=""></a>
+                            <span><a href="#">阿迪达斯</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120219.png" alt=""></a>
+                            <span><a href="#">李宁</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120220.png" alt=""></a>
+                            <span><a href="#">安踏</a></span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/upload/20120217.jpg" alt="">
+                            </a>
+                            <span><a href="#">耐克</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120218.jpg" alt=""></a>
+                            <span><a href="#">阿迪达斯</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120219.png" alt=""></a>
+                            <span><a href="#">李宁</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120220.png" alt=""></a>
+                            <span><a href="#">安踏</a></span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/upload/20120217.jpg" alt="">
+                            </a>
+                            <span><a href="#">耐克</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120218.jpg" alt=""></a>
+                            <span><a href="#">阿迪达斯</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120219.png" alt=""></a>
+                            <span><a href="#">李宁</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120220.png" alt=""></a>
+                            <span><a href="#">安踏</a></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- /jnBrand -->
     </div>
     <!-- /content -->
 
