--- a/index.html
+++ b/index.html
@@ -332,6 +332,24 @@
                             <a href="#"><img src="./images/upload/20120220.png" alt=""></a>
                             <span><a href="#">安踏</a></span>
                         </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/upload/20120217.jpg" alt="">
+                            </a>
+                            <span><a href="#">耐克</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120218.jpg" alt=""></a>
+                            <span><a href="#">阿迪达斯</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120219.png" alt=""></a>
+                            <span><a href="#">李宁</a></span>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/upload/20120220.png" alt=""></a>
+                            <span><a href="#">安踏</a></span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -354,5 +372,7 @@
     <script src="./scripts/addhot.js" charset="utf-8"></script>
     <script src="./scripts/ad.js" charset="utf-8"></script>
     <script src="./scripts/tooltip.js" charset="utf-8"></script>
+    <script src="./scripts/imgSlide.js" charset="utf-8"></script>
+    <script src="./scripts/imgHover.js" charset="utf-8"></script>
 </body>
 </html>
